@@ -1,3 +1,6 @@
+2011-09-26
+ * bool, onoff values
+
 2011-09-25
  * switchCooling, coolingOnOff in camd
 
